# Voice_agent_V2

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
docs/: CODE_REVIEW_FIXES.md  LLM_ARCH_PLAN.md  PLAN.md  UI_DESIGN.md  UI_PATTERN_REFERENCE.md  UI_PHASE2.md  UI_PHASE3.md  UI_PHASE5.md  UI_PHASE6.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: AgentStatusInline.tsx  App.tsx  CameraPreview.tsx  HistoryReplayInjector.tsx  HistorySidebar.tsx  ImageMessageListener.tsx  PersonaConversation.tsx  PersonaKaraokeOverlay.tsx  SendTextInput.tsx  SessionActivator.tsx  SessionList.tsx  SettingsDrawer.tsx  StatusOverlay.tsx  config.ts  historyPersonaStore.ts  icons.tsx  imageStore.ts  index.css  main.tsx  useActivePersona.ts  useAgentState.ts  usePersonaPlasma.ts  usePersonaPlasmaState.ts  useServerConfig.ts  useSessions.ts  useSettings.ts
scripts/: latency_report.py
server/: agent_status.py  bot.py  latency_observer.py  mimo_tts.py  persona_router.py  personas.yaml  session_manager.py  vision_appender.py  weather_tool.py
server/skills/: __init__.py  loader.py  registry.py
server/skills_data/image_gen/: SKILL.md
server/skills_data/weather/: SKILL.md
server/tools/: __init__.py  base.py  registry.py
server/tools/builtin/: __init__.py  image_gen.py  weather.py
